[tool.poetry]
name = "psearch"
version = "0.1.0"
description = "Provenance Search over ASKEM Entities powered by GPT-3"
authors = ["Five Grant <5@fivegrant.com>"]
readme = "README.md"
packages = [{include = "psearch"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.25.0"

[tool.poetry.scripts]
psearch = "psearch.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
